# worktimer

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.rst  LICENSE  README.rst  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: cd-release.yaml  ci.yaml
docs/: api.rst  cli.rst  conf.py  index.rst
tasks/: __init__.py  commits.py  dependencies.py  documentation.py  formatting.py  tests.py
tests/cli/: conftest.py  test_cli.py
tests/core/: test_util.py
worktimer/cli/: cli.py  main.py
worktimer/cli/commands/: __init__.py  day.py  start.py  stop.py  util.py  week.py
worktimer/core/: const.py  database.py  util.py  worktimer.py
